--- a/public/ui.html
+++ b/public/ui.html
@@ -116,7 +116,7 @@
 <body>
   <div id="root">
     <header class="app-header">
-      <h1>UI-Kit</h1>
+      <h1>Bookmonkey UI-Kit</h1>
       <nav>
         <a href="#general">General</a>
         <a href="#icons">Icons</a>
